updated jqueryform, jquery chosen and removed MaxPermSize from integration test execution