@@ -141,7 +141,7 @@
         <jawr.version>3.7-SNAPSHOT</jawr.version>
         <jasypt.version>1.9.2</jasypt.version>
         <jets3t.version>0.9.0</jets3t.version>
-        <jetty.version>9.1.3.v20140225</jetty.version>
+        <jetty.version>9.2.10.v20150310</jetty.version>
         <jetty.npn.boot.version>1.1.7.v20140316</jetty.npn.boot.version>
         <jetty.npn.api.version>1.1.0.v20120525</jetty.npn.api.version>
         <jgravatar.version>1.0</jgravatar.version>
@@ -154,7 +154,7 @@
         <fontawesome.webjars.version>4.3.0</fontawesome.webjars.version>
         <jquerycycle2.webjars.version>2.1.0</jquerycycle2.webjars.version>
         <jqueryatmosphere.webjars.version>2.2.3</jqueryatmosphere.webjars.version>
-        <jqueryform.webjars.version>3.28.0-2013.02.06-1</jqueryform.webjars.version>
+        <jqueryform.webjars.version>3.51</jqueryform.webjars.version>
         <jquerycookiecuttr.version>4dc24d9628</jquerycookiecuttr.version>
         <jquerycookie.version>1.4.0</jquerycookie.version>
         <jquerycolorbox.webjars.version>1.4.33</jquerycolorbox.webjars.version>
@@ -162,7 +162,7 @@
         <jquerypayment.webjars.version>1.1.4</jquerypayment.webjars.version>
         <jqueryjcarousel.webjars.version>0.3.1</jqueryjcarousel.webjars.version>
         <jqueryraty.webjars.version>2.5.2</jqueryraty.webjars.version>
-        <jquerychosen.webjars.version>1.1.0-1</jquerychosen.webjars.version>
+        <jquerychosen.webjars.version>1.3.0</jquerychosen.webjars.version>
         <jqueryeasing.webjars.version>1.3</jqueryeasing.webjars.version>
         <jqueryeasyzoom.webjars.version>2.2.0</jqueryeasyzoom.webjars.version>
         <jquerysoundmanager2.webjars.version>2.97a.20131201</jquerysoundmanager2.webjars.version>
@@ -823,7 +823,7 @@
                         </executions>
                         <configuration>
                             <!--argLine>${failsafeArgLine}</argLine-->
-                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m ${failsafeArgLine}</argLine>
+                            <argLine>-Xms512m -Xmx1024m ${failsafeArgLine}</argLine>
                             <useManifestOnlyJar>false</useManifestOnlyJar>
                             <useSystemClassLoader>true</useSystemClassLoader>
                             <groups>com.nemesis.platform.util.test.IntegrationTest</groups>
